Add jSpecify node.hw.sunspec.support package.